# masters_project_2026

./: .gitignore  README.md  pyproject.toml
backend/app/: main.py
data/: file_energy.csv
data/r0/: dist_0  dist_1.2  dist_2.4  dist_3.6  dist_4.8  dist_6.0  dist_7.2  dist_8.4  dist_9.6  fitting.opj
data/r100/: dist_0  dist_1.2  dist_2.4  dist_3.6  dist_4.8  dist_6.0  dist_7.2  dist_8.4  dist_9.6  nn.py
data/r120/: dist_0  dist_1.2  dist_2.4  dist_3.6  dist_4.8  dist_6.0  dist_7.2  dist_8.4  dist_9.6
data/r140/: dist_0  dist_1.2  dist_2.4  dist_3.6  dist_4.8  dist_6.0  dist_7.2  dist_8.4  dist_9.6
data/r160/: dist_0  dist_1.2  dist_2.4  dist_3.6  dist_4.8  dist_6.0  dist_7.2  dist_8.4  dist_9.6
data/r180/: dist_0  dist_1.2  dist_2.4  dist_3.6  dist_4.8  dist_6.0  dist_7.2  dist_8.4  dist_9.6
data/r20/: dist_0  dist_1.2  dist_2.4  dist_3.6  dist_4.8  dist_6.0  dist_7.2  dist_8.4  dist_9.6
data/r200/: dist_0  dist_1.2  dist_2.4  dist_3.6  dist_4.8  dist_6.0  dist_7.2  dist_8.4  dist_9.6  nn.py
data/r220/: dist_0  dist_1.2  dist_2.4  dist_3.6  dist_4.8  dist_6.0  dist_7.2  dist_8.4  dist_9.6
data/r240/: dist_0  dist_1.2  dist_2.4  dist_3.6  dist_4.8  dist_6.0  dist_7.2  dist_8.4  (+1 more)
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
notebooks/: 01_build_dataset_inventory.ipynb  02_cif_parse_to_graph.ipynb  04_features.ipynb  05_structural_motif.ipynb  06_energy_aware_scientific_interpretation.ipynb  07_similarity_search_and_discovery.ipynb  08_experiments_validation.ipynb
outputs/: dataset_inventory.csv  dataset_master.csv
(+11975 files in other folders)
